STL-5 Add unit tests